[gd_scene load_steps=3 format=3 uid="uid://c24ut60c04aak"]

[ext_resource type="Script" path="res://scenes/kill_spots.gd" id="1_4a8jp"]
[ext_resource type="AudioStream" uid="uid://b3hue1gwpqxy1" path="res://assets/sounds/game-over-arcade-6435.mp3" id="2_q2560"]

[node name="KillSpots" type="Area2D"]
collision_mask = 2
script = ExtResource("1_4a8jp")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="gameOver" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_q2560")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
